<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_disabledColor="#606060"
    app:cnb_unselectedColor="#696969">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/navigation_list" />
        <item
            android:id="@+id/nav_write"
            android:icon="@drawable/ic_add_photo"
            android:title="@string/navigation_write" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/navigation_settings" />
    </group>

    <item android:title="@string/navigation_sub_items">
        <menu>
            <item
                android:id="@+id/nav_write2"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_dummy_item_1" />
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_dummy_item_2" />
        </menu>
    </item>

</menu>
